Added output_override feature

--- a/jobs/parser/templates/config/input_and_output.conf.erb
+++ b/jobs/parser/templates/config/input_and_output.conf.erb
@@ -21,6 +21,10 @@ input {
 }
 
 output {
+  <% if p("logstash_parser.output_override") %>
+    <%= p('logstash_parser.output_override')  %>
+  <% else %>
+
     <% if p("logstash_parser.debug") %>
         stdout {
             codec => "json"
@@ -43,4 +47,6 @@ output {
     }
 
     <%= p('logstash_parser.outputs', '')  %>
+
+  <% end %>
 }
